Add WineEvidenceWine to WineEvidence
